		 A new error message (LXC034N) is sent to the syslog in the
		 event that the client doesn't get a reply before timeout
		 expiration. The previous behaviour can be obtained setting a
		 new environment variable:
		 export LIXA_CLIENT_CONNECTION_TIMEOUT=-1
		 A shorter timeouts can be set as well:
		 export LIXA_CLIENT_CONNECTION_TIMEOUT=1000

2019-04-07 1.7.7 Documentation fix

2019-03-22 1.7.6 Fixed a bug related to xta_transaction_start() issued multiple
		 times on an object used for multiple branches transaction.
		 Fixed a bug related to XTA multiple branches pseudo synchronous
		 pattern when the subordinate gets an error during "prepare".
		 Fixed a bug related LIXA_XAER_HAZARD: this is a strange
		 condition for XA standard, but it's exploited by an old
		 JDBC driver for PostgreSQL.
		 *** WARNING: ***
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.7.6 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch); LIXA_MSG_LEVEL=4.

2019-02-23 1.7.5 Docker images for LIXA (XTA for Java)
		 Fixed a build bug related to tests/src/java directory

2019-02-09 1.7.4 Docker image for LIXA client (command line utilities)
		 Added environment variable LIXA_STATE_SERVERS

2019-02-03 1.7.3 Docker image for LIXA state server: lixad
		 New build options, dedicated to disable single components and
		 syslog: they are useful to produce Docker images.
		 --disable-syslog build option can be used to have messages on
		 stderr instead of sending them to system logger.

2019-01-20 1.7.2 Java API for XTA
		 These functions/methods are now deprecated because useless:
		 - xta_transaction_open
		 - xta_transaction_close
		 they will be removed in the near future.
		 Renamed to lowercase C++ API methods
		 	Removed xta::Transaction.Open
		 	Removed xta::Transaction.Close
		 Renamed to lowercase Python API methods
		 	Removed Transaction.Open
		 	Removed Transaction.Close
		 *** WARNING: ***