@@ -1,5 +1,3 @@
-Implement "Config" class for Java
-Test Config class in Java
 Create a specific case test for timeout using XTA branching
 
 Improving the state file synchronization elapsed time is now a priority to
